--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import 'material-icons/iconfont/material-icons.css';
+
 /* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
